small fixes to css for album covers

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,6 @@
 .sidebar-utilities{
     width: 100%;
     height: 100px;
-    background-color:
 }
 
 .sidebar-utilities li{
